--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
          </div>
          
-         <div class="swiper-slide slide" style="background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(images/7.jpg) no-repeat">
+         <div class="swiper-slide slide" style="background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(images/7.JPG) no-repeat">
             <div class="content">
                <span>One Team. one spirit. one goal</span>
                <h3>Facility Centrum</h3>
@@ -90,7 +90,7 @@
             </div>
          </div>
 
-         <div class="swiper-slide slide" style="background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(images/8.jpg) no-repeat">
+         <div class="swiper-slide slide" style="background: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.6)), url(images/8.JPG) no-repeat">
             <div class="content">
                <span>One Team. one spirit. one goal</span>
                <h3>Fintess Gym</h3>
@@ -221,7 +221,7 @@
       </div>
       <div class="box">
          <div class="image">
-            <img src="images/7.jpg" alt="">
+            <img src="images/7.JPG" alt="">
          </div>
          <div class="content">
             <h3>Hometel</h3>
@@ -232,7 +232,7 @@
       </div>
       <div class="box">
          <div class="image">
-            <img src="images/8.jpg" alt="">
+            <img src="images/8.JPG" alt="">
          </div>
          <div class="content">
             <h3>CTU Fitness Gym</h3>
